# unsupervised-truth-probes

./: .gitignore  README.md  pyproject.toml  requirements.txt  utils.py
data/: UKPLab-liar-test-augmented.json  UKPLab-liar-validation-augmented.json  civil-comments-test-correlated.json  civil-comments-train-balanced.json  civil-comments-train-correlated.json  civil-comments-train-original.json
experiments/abhay/2025_05_30_testing_basics/: testing_probing.ipynb
notebooks/: testing_probing.ipynb
src/: __init__.py  config.py  evals.py  layer_analysis.py  methods.py  plotting.py  probing.py  unsup_elicit.py  utils.py
